Prevent selecting room text & fixed background on mobile

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -5,7 +5,6 @@ body {
 }
 
 body {
-  background: $primary;
   color: $neutral-light;
 }
 
